fix display on mobile

--- a/wp-content/themes/integral/css/merepresenta.css
+++ b/wp-content/themes/integral/css/merepresenta.css
@@ -20,7 +20,7 @@
   background-color: #632b98;
   border-color: #632b98;
   color: #fff;
-} 
+}
 .container.corpo {
   margin-top: 10em;
 }
@@ -30,7 +30,7 @@ body.resposta.resposta-vazia div.resposta-em-branco
 {
   display: block;
 }
-body p.resposta, 
+body p.resposta,
 body.resposta.resposta-vazia p.resposta,
 body div.resposta-em-branco,
 body.resposta p.pesquisa {
@@ -400,8 +400,7 @@ section.hero {
   text-indent: -9999px;
 }
 /* Pagina politicos id 20 + pagina politica de privacidade id 14*/
-body.page-id-14,
-body.page-id-20 {
+body.page-id-14 {
   padding-top: 67px;
 }
 body.page-id-14 {
@@ -510,4 +509,14 @@ input[type=checkbox].chk-cidade {
 }
 #cidades-escolhidas>label {
     padding-right: .5em;
+}
+
+@media (max-width: 640px) {
+  .container.corpo {
+    margin-top: 0em;
+  }
+  .page-id-20 .bio {
+    padding: 0px 15px;
+    margin-bottom: 30px;
+  }
 }
